--- a/src/change.html
+++ b/src/change.html
@@ -29,9 +29,7 @@
 				</div>
 				<div class="header__connect button">
 					<span class="header__connect-body button-body">
-						<a href="popup_create_artwork_one.html">
-							+ Add artwork
-						</a>
+						+ Add artwork
 					</span>
 				</div>
 				<div class="header__lk lk">
@@ -53,7 +51,7 @@
 									</div>
 									<img src="img/kiss.svg" alt="like">
 									<div class="balance__amount money">
-											1,150,000,000,000
+										1,150,000,000,000
 									</div>
 								</div>
 							</div>
@@ -67,13 +65,13 @@
 							Address: 0c0xcx1cx606g4516x51g1...
 						</div>
 						<div class="lk-menu__item">
-							My profile
+							<a href="#" class="lk-menu__item-link">My profile</a>
 						</div>
 						<div class="lk-menu__item">
-							Balance settings
+							<a href="#" class="lk-menu__item-link">Balance settings</a>
 						</div>
 						<div class="lk-menu__item">
-							Log out
+							<a href="#" class="lk-menu__item-link">Log out</a>
 						</div>
 					</div>
 				</div>
@@ -82,37 +80,37 @@
 
 		<main class="main container">
 
-			<div class="change">
-				<div class="change__body">
-					<div class="change__exit">
+			<div class="popup">
+				<div class="popup__inner">
+					<div class="popup__exit">
 						<img src="img/exit-icon.svg" alt="exit">
 					</div>
-					<div class="change__core">
-						<div class="change__title">
-							Changing ending time
-						</div>
-						<div class="change__content">
-							<div class="change__content-title">
+					<div class="popup__title">
+						Changing ending time
+					</div>
+					<div class="popup__body">
+						<div class="popup__content">
+							<div class="popup__content-title">
 								Auction will end:
 							</div>
-							<div class="change__info change-info">
-								<div class="change-info__item">
-									<div class="change-info__item-date">
+							<div class="popup__info popup-info">
+								<div class="popup-info__item">
+									<div class="popup-info__item-date">
 										22.02.2020
 									</div>
 								</div>
-								<div class="change-info__item">
-									<div class="change-info__item-time">
+								<div class="popup-info__item">
+									<div class="popup-info__item-time">
 										23:45
 									</div>
 								</div>
-								<div class="change-info__item">
-									<div class="change-info__item-timestamp">
+								<div class="popup-info__item">
+									<div class="popup-info__item-timestamp">
 										05h 02m 41s
 									</div>
 								</div>
-								<div class="change-info__item">
-									<div class="change-info__item-delete delete-file-button">
+								<div class="popup-info__item">
+									<div class="popup-info__item-delete delete-file-button">
 										<img class="delete-file-button__img" src="img/delete-icon.svg" alt="delete">
 										<span class="delete-file-button__text">
 											delete file
@@ -120,7 +118,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="change__button button">
+							<div class="popup__button button">
 								<span class="button-body">
 									Change
 								</span>
