--- a/src/edit-your-profile.html
+++ b/src/edit-your-profile.html
@@ -29,9 +29,7 @@
 				</div>
 				<div class="header__connect button">
 					<span class="header__connect-body button-body">
-						<a href="popup_create_artwork_one.html">
-							+ Add artwork
-						</a>
+						+ Add artwork
 					</span>
 				</div>
 				<div class="header__lk lk">
@@ -67,32 +65,31 @@
 							Address: 0c0xcx1cx606g4516x51g1...
 						</div>
 						<div class="lk-menu__item">
-							My profile
+							<a href="#" class="lk-menu__item-link">My profile</a>
 						</div>
 						<div class="lk-menu__item">
-							Balance settings
+							<a href="#" class="lk-menu__item-link">Balance settings</a>
 						</div>
 						<div class="lk-menu__item">
-							Log out
+							<a href="#" class="lk-menu__item-link">Log out</a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</header>
-
 		<main class="main container">
 
-			<div class="change">
-				<div class="change__body">
-					<div class="change__exit">
+			<div class="popup">
+				<div class="popup__inner">
+					<div class="popup__exit">
 						<img src="img/exit-icon.svg" alt="exit">
 					</div>
-					<div class="change__core">
-						<div class="change__title">
+					<div class="popup__body">
+						<div class="popup__title">
 							Edit your Profile
 						</div>
-						<div class="change-profile">
-							<div class="change-profile__general general-info">
+						<div class="popup-profile">
+							<div class="popup-profile__general general-info">
 								<div class="general-info__item">
 									<div class="general-info__item-title">
 										Name
@@ -125,15 +122,15 @@
 									</div>
 								</div>
 							</div>
-							<div class="change-profile__bio">
-								<div class="change-profile__bio-title">
+							<div class="popup-profile__bio">
+								<div class="popup-profile__bio-title">
 									BIO
 								</div>
-								<div class="change-profile__bio-textarea">
+								<div class="popup-profile__bio-textarea">
 									<textarea name="" id="" cols="1" rows="1"></textarea>
 								</div>
 							</div>
-							<div class="change-profile__picture profile-picture">
+							<div class="popup-profile__picture profile-picture">
 								<div class="profile-picture__title">
 									Profile image
 								</div>
@@ -159,7 +156,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="change-profile__contacts profile-contact">
+							<div class="popup-profile__contacts profile-contact">
 								<div class="profile-contact__title">
 									Contacts
 								</div>
@@ -203,9 +200,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="change__button button">
+						<div class="popup__button button">
 							<span class="button-body">
-								Change
+								popup
 							</span>
 						</div>
 					</div>
