--- a/src/item.html
+++ b/src/item.html
@@ -21,7 +21,7 @@
 		<header class="header">
 			<div class="header__body">
 				<div class="header__logo">
-					<img src="img/logo.svg" alt="logo">
+					<a href="main-page.html"><img src="img/logo.svg" alt="logo"></a>
 				</div>
 				<div class="header__search">
 					<img src="img/search.svg" alt="search">
@@ -109,14 +109,14 @@
 						</p>
 					</div>
 					<div class="user-info__footer">
-						<div class="user-info__action">
-							<div class="user-info__action-item">
+						<div class="user-info__action option">
+							<div class="option__item">
 								<img src="img/external-link.svg" alt="link">
 							</div>
-							<div class="user-info__action-item">
+							<div class="option__item">
 								<img src="img/share.svg" alt="share">
 							</div>
-							<div class="user-info__action-item">
+							<div class="option__item">
 								<img src="img/threepoint.svg" alt="menu">
 							</div>
 						</div>
