--- a/src/popup_create_artwork_three.html
+++ b/src/popup_create_artwork_three.html
@@ -29,9 +29,7 @@
 				</div>
 				<div class="header__connect button">
 					<span class="header__connect-body button-body">
-						<a href="popup_create_artwork_one.html">
-							+ Add artwork
-						</a>
+						+ Add artwork
 					</span>
 				</div>
 				<div class="header__lk lk">
@@ -67,13 +65,13 @@
 							Address: 0c0xcx1cx606g4516x51g1...
 						</div>
 						<div class="lk-menu__item">
-							My profile
+							<a href="#" class="lk-menu__item-link">My profile</a>
 						</div>
 						<div class="lk-menu__item">
-							Balance settings
+							<a href="#" class="lk-menu__item-link">Balance settings</a>
 						</div>
 						<div class="lk-menu__item">
-							Log out
+							<a href="#" class="lk-menu__item-link">Log out</a>
 						</div>
 					</div>
 				</div>
@@ -82,15 +80,15 @@
 
 		<main class="main container">
 
-			<div class="change">
-				<div class="change__body">
-					<div class="change__core">
-						<div class="change__exit">
-							<img src="img/exit-icon.svg" alt="exit">
-						</div>
-						<div class="create__title">
-							Creating artwork
-						</div>
+			<div class="popup">
+				<div class="popup__inner">
+					<div class="popup__exit">
+						<img src="img/exit-icon.svg" alt="exit">
+					</div>
+					<div class="popup__title">
+						Creating artwork
+					</div>
+					<div class="popup__body">
 						<div class="create__progress">
 							<div class="create__progress-item create__progress-item_active"></div>
 							<div class="create__progress-item create__progress-item_active"></div>
@@ -171,24 +169,24 @@
 								<div class="create-timer__set">
 									Set timer
 								</div>
-								<div class="create-timer__info change-info">
-									<div class="change-info__item">
-										<div class="change-info__item-date">
+								<div class="create-timer__info popup-info">
+									<div class="popup-info__item">
+										<div class="popup-info__item-date">
 											22.02.2020
 										</div>
 									</div>
-									<div class="change-info__item">
-										<div class="change-info__item-time">
+									<div class="popup-info__item">
+										<div class="popup-info__item-time">
 											23:45
 										</div>
 									</div>
-									<div class="change-info__item">
-										<div class="change-info__item-timestamp">
+									<div class="popup-info__item">
+										<div class="popup-info__item-timestamp">
 											05h 02m 41s
 										</div>
 									</div>
-									<div class="change-info__item">
-										<div class="change-info__item-delete delete-file-button">
+									<div class="popup-info__item">
+										<div class="popup-info__item-delete delete-file-button">
 											<img class="delete-file-button__img" src="img/delete-icon.svg" alt="delete">
 											<span class="delete-file-button__text">
 												delete file
