--- a/src/connect-wallet.html
+++ b/src/connect-wallet.html
@@ -29,9 +29,7 @@
 				</div>
 				<div class="header__connect button">
 					<span class="header__connect-body button-body">
-						<a href="popup_create_artwork_one.html">
-							+ Add artwork
-						</a>
+						+ Add artwork
 					</span>
 				</div>
 				<div class="header__lk lk">
@@ -54,7 +52,7 @@
 									<img src="img/kiss.svg" alt="like">
 									<div class="balance__amount money">
 										1,150,000,000,000
-								</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -67,13 +65,13 @@
 							Address: 0c0xcx1cx606g4516x51g1...
 						</div>
 						<div class="lk-menu__item">
-							My profile
+							<a href="#" class="lk-menu__item-link">My profile</a>
 						</div>
 						<div class="lk-menu__item">
-							Balance settings
+							<a href="#" class="lk-menu__item-link">Balance settings</a>
 						</div>
 						<div class="lk-menu__item">
-							Log out
+							<a href="#" class="lk-menu__item-link">Log out</a>
 						</div>
 					</div>
 				</div>
@@ -82,16 +80,16 @@
 
 		<main class="main container">
 
-			<div class="change">
-				<div class="change__body">
-					<div class="change__exit">
+			<div class="popup">
+				<div class="popup__inner">
+					<div class="popup__exit">
 						<img src="img/exit-icon.svg" alt="exit">
 					</div>
-					<div class="change__core">
-						<div class="change__title">
+					<div class="popup__body">
+						<div class="popup__title">
 							Connecting wallet
 						</div>
-						<div class="change__content">
+						<div class="popup__content">
 							<div class="connect-wallet">
 								<div class="connect-wallet__item">
 									<div class="connect-wallet__item-video">
@@ -137,7 +135,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="change__button button">
+						<div class="popup__button button">
 							<span class="button-body">
 								Connect wallet
 							</span>
