--- a/src/myprofile.html
+++ b/src/myprofile.html
@@ -65,13 +65,13 @@
 							Address: 0c0xcx1cx606g4516x51g1...
 						</div>
 						<div class="lk-menu__item">
-							My profile
+							<a href="#" class="lk-menu__item-link">My profile</a>
 						</div>
 						<div class="lk-menu__item">
-							Balance settings
+							<a href="#" class="lk-menu__item-link">Balance settings</a>
 						</div>
 						<div class="lk-menu__item">
-							Log out
+							<a href="#" class="lk-menu__item-link">Log out</a>
 						</div>
 					</div>
 				</div>
