--- a/src/popup_create_artwork_one.html
+++ b/src/popup_create_artwork_one.html
@@ -29,9 +29,7 @@
 				</div>
 				<div class="header__connect button">
 					<span class="header__connect-body button-body">
-						<a href="popup_create_artwork_one.html">
-							+ Add artwork
-						</a>
+						+ Add artwork
 					</span>
 				</div>
 				<div class="header__lk lk">
@@ -67,13 +65,13 @@
 							Address: 0c0xcx1cx606g4516x51g1...
 						</div>
 						<div class="lk-menu__item">
-							My profile
+							<a href="#" class="lk-menu__item-link">My profile</a>
 						</div>
 						<div class="lk-menu__item">
-							Balance settings
+							<a href="#" class="lk-menu__item-link">Balance settings</a>
 						</div>
 						<div class="lk-menu__item">
-							Log out
+							<a href="#" class="lk-menu__item-link">Log out</a>
 						</div>
 					</div>
 				</div>
@@ -82,15 +80,15 @@
 
 		<main class="main container">
 
-			<div class="change">
-				<div class="change__body">
-					<div class="change__core">
-						<div class="change__exit">
-							<img src="img/exit-icon.svg" alt="exit">
-						</div>
-						<div class="create__title">
-							Creating artwork
-						</div>
+			<div class="popup">
+				<div class="popup__inner">
+					<div class="popup__exit">
+						<img src="img/exit-icon.svg" alt="exit">
+					</div>
+					<div class="create__title">
+						Creating artwork
+					</div>
+					<div class="popup__body">
 						<div class="create__exception">
 							Your artwork wasn’t approved. Cause is: Amet minim mollit non deserunt ullamco est sit aliqua dolor do
 							amet
