--- a/src/withdraw.html
+++ b/src/withdraw.html
@@ -29,9 +29,7 @@
 				</div>
 				<div class="header__connect button">
 					<span class="header__connect-body button-body">
-						<a href="popup_create_artwork_one.html">
-							+ Add artwork
-						</a>
+						+ Add artwork
 					</span>
 				</div>
 				<div class="header__lk lk">
@@ -52,8 +50,8 @@
 										Balance:
 									</div>
 									<img src="img/kiss.svg" alt="like">
-									<div class="balance__amount">
-										1,5M
+									<div class="balance__amount money">
+										1,150,000,000,000
 									</div>
 								</div>
 							</div>
@@ -67,13 +65,13 @@
 							Address: 0c0xcx1cx606g4516x51g1...
 						</div>
 						<div class="lk-menu__item">
-							My profile
+							<a href="#" class="lk-menu__item-link">My profile</a>
 						</div>
 						<div class="lk-menu__item">
-							Balance settings
+							<a href="#" class="lk-menu__item-link">Balance settings</a>
 						</div>
 						<div class="lk-menu__item">
-							Log out
+							<a href="#" class="lk-menu__item-link">Log out</a>
 						</div>
 					</div>
 				</div>
@@ -82,24 +80,24 @@
 
 		<main class="main container">
 
-			<div class="change">
-				<div class="change__body">
-					<div class="change__exit">
+			<div class="popup">
+				<div class="popup__inner">
+					<div class="popup__exit">
 						<img src="img/exit-icon.svg" alt="exit">
 					</div>
-					<div class="change__core">
-						<div class="change__title">
+					<div class="popup__body">
+						<div class="popup__title">
 							Withdraw
 						</div>
 
-						<div class="change__back">
+						<div class="popup__back">
 							<img src="img/back-icon.svg" alt="back">
 						</div>
-						<div class="change__content">
-							<div class="change__content-title">
+						<div class="popup__content">
+							<div class="popup__content-title">
 								You will get
 							</div>
-							<div class="change__content-values create-values">
+							<div class="popup__content-values create-values">
 								<div class="create-values__taste">
 									<span class="create-values__taste-digit">
 										10000000
@@ -118,7 +116,7 @@
 									(1308.54$)
 								</div>
 							</div>
-							<div class="change__button button">
+							<div class="popup__button button">
 								<span class="button-body">
 									Confirm
 								</span>
